crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__inheritance__constructor.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/inheritance/constructor.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: arity error: `<class B at [POINTER]>` expects 0 args but 1 args were passed
    ╭─[craftinginterpreters/test/inheritance/constructor.lox:13:9]
    │
 13 │ var b = B("value");
    │         ┬  
    │         ╰── expects 0 arguments
────╯
